<resources>
    <string name="app_name">红树林导航</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="ButtonFuction">
        <item>导航</item>
        <item>定位</item>
        <item>休闲线1</item>
        <item>美食线1</item>
    </string-array>
    <string name="title_activity_mangrove_main">MangroveMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="str_setting">设置</string>
    <string name="app_person_activity">个人中心</string>
    <string name="app_find_password_activity">重置密码</string>
    <string name="app_bind_room_activity">绑定客房</string>
    <string name="app_change_pwd">修改密码</string>
    <string name="app_change_phone">修改手机号</string>
    <string name="app_change_name">编辑姓名</string>
    <string name="txt_send_check">发送验证</string>
    <string name="txt_code">验证码</string>
    <string name="valid_6_number">6位数字</string>
    <string name="text_login_pwd">登录密码</string>
    <string name="valid_6_to_18_number">6-18位数字或字母</string>
    <string name="app_xy">《红树林管家用户协议》</string>
    <string name="app_xy_wv">红树林管家用户协议</string>
    <string name="app_register">注 册</string>
    <string name="btn_submit">保 存</string>
    <string name="str_logout">注 销</string>
    <string name="err">两次密码输入不一致</string>
    <string name="setting">设置</string>
    <string name="title_activity_map_search_acitivity">搜索</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <string name="first_text">请确认已连接本酒店WIFI，以便您使用地图导航和呼叫服务的功能，祝您旅途愉快！ </string>
    <string name="first_hint">温馨提示 </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="soft_update_no">您的软件是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到最新版本立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="button_confirm_txt">确定</string>
    <string name="button_cancel_txt">取消</string>
    <string name="about_mangrove_navigation">红树林导航，是集红树林全球度假平台、园区导航服务、呼叫服务、红树林一卡通系统于一体的综合性平台。功能涵盖酒店搜索、酒店展示、度假资讯、客房预订、度假产品销售，以及红树林自营酒店的地图导航、呼叫服务、一卡通消费等功能。</string>
    <string name="update_desc">下载中...</string>
    <string name="text_call_region">呼叫区域:%1$s</string>
    <string name="text_call_content_lable">呼叫内容</string>
    <string name="edit_hint_lable">请输入您需要服务的内容</string>


</resources>
